#624 removed incorrect ALT clarification (#657)
* #624 removed incorrect ALT clarification

* Added <*> to ALT allele listing

* Reworded to explicitly limit the possible ALT allele options

* Updated ALT field reference to the single breakend subsection.

Co-authored-by: Daniel Cameron <d-cameron@github.com>

--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -322,9 +322,8 @@ Fixed fields are:
 
   \item ALT --- alternate base(s): Comma-separated list of alternate non-reference alleles.
   These alleles do not have to be called in any of the samples.
-  Options are base Strings made up of the bases A,C,G,T,N (case insensitive) or the `*' symbol (allele missing due to overlapping deletion) or a MISSING value `.' (no variant) or an angle-bracketed ID String (``$<$ID$>$'') or a breakend replacement string as described in Section \ref{Breakends}.
+  Each allele in this list must be one of: a non-empty String of bases (A,C,G,T,N; case insensitive); the `*' symbol (allele missing due to overlapping deletion); the MISSING value `.' (no variant); an angle-bracketed ID String (``$<$ID$>$''); the unspecified allele ``$<$*$>$'' as described in Section \ref{unspecified-allele}; or a breakend replacement string as described in Section \ref{SingleBreakends}.
   If there are no alternative alleles, then the MISSING value must be used.
-  In other words, the ALT field must be a symbolic allele, or a breakend replacement string, or match the regular expression \texttt{\^{}([ACGTNacgtn]+|\string\*|\string\.)\$}.
   Tools processing VCF files are not required to preserve case in the allele String, except for IDs, which are case sensitive.
   (String; no whitespace, commas, or angle-brackets are permitted in the ID String itself)
   \item QUAL --- quality: Phred-scaled quality score for the assertion made in ALT. i.e.\ $-10log_{10}$ prob(call in ALT is wrong).
@@ -1334,6 +1333,7 @@ Depending on which positions are chosen for the breakends X and Y, it might not 
 This partner relationship can be specified explicitly with the tag PARID=bnd\_X in the VCF line for breakend V and PARID=bnd\_Y in the VCF line for breakend U, and vice versa.
 
 \subsubsection{Single breakends}
+\label{SingleBreakends}
 We allow for the definition of a breakend that is not part of a novel adjacency.
 We call these single breakends, because they lack a mate.
 Breakends that are unobserved partners of breakends in observed novel adjacencies are one kind of single breakend.
@@ -1549,6 +1549,7 @@ Haplotype quality & 30 & 40 & 40 \\
 
 \pagebreak
 \subsection{Representing unspecified alleles and REF-only blocks (gVCF)}
+\label{unspecified-allele}
 In order to report sequencing data evidence for both variant and non-variant positions in the genome, the VCF specification allows to represent blocks of reference-only calls in a single record using the END INFO tag, an idea originally introduced by the gVCF file format\footnote{\url{https://help.basespace.illumina.com/articles/descriptive/gvcf-files/}}.
 
 The convention adopted here is to represent reference evidence as likelihoods against an unknown alternate allele represented as $<$*$>$.
