--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -622,6 +622,8 @@ For record containing no symbolic alleles, END is $\mbox{POS} + \mbox{length of 
 For records containing symbolic structural variant alleles, END is $\mbox{POS} + \mbox{SVLEN}$.
 For records containing the $<$*$>$ symbolic allele, END corresponds to the last reference call position.
 
+END must be present for all records containing the $<$*$>$ symbolic allele and, for backwards compatibility, should be present for records containing any symbolic structural variant alleles.
+
 Due to the potential for loss of information, no VCF record can contain both the $<$*$>$ symbolic allele and a symbolic structural variant allele.
   
 \footnotesize
@@ -651,7 +653,7 @@ For backwards compatibility, a missing SVLEN should be inferred from the $END$ f
 
 For backwards compatibility, the absolute value of SVLEN should be taken and a negative SVLEN should be treated as positive values.
 
-Note that for structural variant symbolic alleles, $POS$ corresponds to the based immediately preceding the variant.
+Note that for structural variant symbolic alleles, $POS$ corresponds to the base immediately preceding the variant.
 
 \footnotesize
 \begin{verbatim}
