--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -1032,6 +1032,7 @@ The following page contains examples of structural variants encoded in VCF, show
   \item An insertion with both length and position imprecise
   \item A single breakend
 \end{enumerate}
+The sequence of $chrA$ in this example is ATGCGAAAAAAATGT.
 
 \pagebreak
 \footnotesize
@@ -1053,16 +1054,16 @@ VCF STRUCTURAL VARIANT EXAMPLE
 ##INFO=<ID=SVCLAIM,Number=A,Type=String,Description="Claim made by the structural variant call. Valid values are D, J, DJ for abundance, adjacency and both respectively.">
 ##contig=<ID=chrA,length=1000000>
 ##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
-#CHROM POS ID   REF ALT       QUAL FILTER INFO                                      FORMAT sample
-chrA   2   .    TGC T         .    .      EVENT=DEL_seq                                 GT    0/1
-chrA   2   .    T   <DEL>     .    .      SVLEN=2;SVCLAIM=DJ;EVENT=DEL_symbolic         GT    0/1
-chrA   2 delbp1 T   T[chrA:5[ .    .      MATEID=delbp2;EVENT=DEL_split_bp_cn           GT    0/1
-chrA   2 delbp2 A   ]chrA:2]A .    .      MATEID=delbp1;EVENT=DEL_split_bp_cn           GT    0/1
-chrA   2   .    T   <DEL>     .    .      SVLEN=2;SVCLAIM=D;EVENT=DEL_split_bp_cn       GT    0/1
-chrA   5   .    G   GAAA      .    .      EVENT=homology_seq                            GT    1/1
-chrA   5   .    G   <DUP>     .    .      SVLEN=3;CIPOS=0,5;EVENT=homology_dup          GT    0/1
-chrA   14  .    T   <INS>     .    .      IMPRECISE;SVLEN=100;CILEN=-50,50;CIPOS=-10,10 GT    0/1
-chrA   14  .    G   .CCCCCCG  .    .      EVENT=single_breakend                         GT    0/1
+#CHROM POS ID   REF ALT       QUAL FILTER INFO                                             FORMAT sample
+chrA   2   .    TGC T         .    .      EVENT=DEL_seq                                        GT    0/1
+chrA   2   .    T   <DEL>     .    .      SVLEN=2;SVCLAIM=DJ;EVENT=DEL_symbolic;END=4          GT    0/1
+chrA   2 delbp1 T   T[chrA:5[ .    .      MATEID=delbp2;EVENT=DEL_split_bp_cn                  GT    0/1
+chrA   2 delbp2 A   ]chrA:2]A .    .      MATEID=delbp1;EVENT=DEL_split_bp_cn                  GT    0/1
+chrA   2   .    T   <DEL>     .    .      SVLEN=2;SVCLAIM=D;EVENT=DEL_split_bp_cn;END=4        GT    0/1
+chrA   5   .    G   GAAA      .    .      EVENT=homology_seq                                   GT    1/1
+chrA   5   .    G   <DUP>     .    .      SVLEN=3;CIPOS=0,5;EVENT=homology_dup                 GT    0/1
+chrA   14  .    T   <INS>     .    .      IMPRECISE;SVLEN=100;CILEN=-50,50;CIPOS=-10,10;END=14 GT    0/1
+chrA   14  .    G   .CCCCCCG  .    .      EVENT=single_breakend                                GT    0/1
 \end{verbatim}
 \end{landscape}
 \pagebreak
