--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -683,14 +683,20 @@ If a precise ALT allele is present in a record with the $IMPRECISE$ flag, $CIPOS
 \normalsize
 
 $END$ position of the longest variant described in this record.
+The END of each allele is defined as:
 
-For record containing no symbolic alleles, END is $\mbox{POS} + \mbox{length of REF allele} - 1$.
-For records containing symbolic structural variant alleles, END is $\mbox{POS} + \mbox{SVLEN}$.
-For records containing the $<$*$>$ symbolic allele, END corresponds to the last reference call position.
+Non-symbolic alleles: $\mbox{POS} + \mbox{length of REF allele} - 1$.
+
+$<$INS$>$ symbolic structural variant alleles: $\mbox{POS} + \mbox{length of REF allele} - 1$.
+
+$<$DEL$>$, $<$DUP$>$, $<$INV$>$, and $<$CNV$>$ symbolic structural variant alleles:, $\mbox{POS} + \mbox{SVLEN}$.
+
+$<$*$>$ symbolic allele: the last reference call position.
 
 END must be present for all records containing the $<$*$>$ symbolic allele and, for backwards compatibility, should be present for records containing any symbolic structural variant alleles.
 
-Due to the potential for loss of information, no VCF record can contain both the $<$*$>$ symbolic allele and a symbolic structural variant allele.
+To prevent loss of information, any VCF record containing the $<$*$>$ symbolic allele, must have END set to the last reference call position of the $<$*$>$ symbolic allele.
+When a record contains both the $<$*$>$ symbolic allele, the END position of the longest allele should be used as the record end position for indexing purposes.
   
 \footnotesize
 \begin{verbatim}
@@ -1114,10 +1120,15 @@ VCF STRUCTURAL VARIANT EXAMPLE
 ##ALT=<ID=DEL,Description="Deletion">
 ##ALT=<ID=CNV,Description="Copy number variable region">
 ##INFO=<ID=MATEID,Number=A,Type=String,Description="ID of mate breakend">
+##INFO=<ID=END,Number=1,Type=Integer,Description="End position of the longest variant described in this record">
+##INFO=<ID=CIPOS,Number=.,Type=Integer,Description="Confidence interval around POS for symbolic structural variants">
+##INFO=<ID=SVLEN,Number=A,Type=Integer,Description="Length of structural variant">
+##INFO=<ID=CILEN,Number=.,Type=Integer,Description="Confidence interval for the SVLEN field">
 ##INFO=<ID=EVENT,Number=A,Type=String,Description="ID of associated event">
 ##INFO=<ID=EVENTTYPE,Number=A,Type=String,Description="Type of associated event">
 ##INFO=<ID=CN,Number=A,Type=Float,Description="Copy number of CNV/breakpoint">
 ##INFO=<ID=SVCLAIM,Number=A,Type=String,Description="Claim made by the structural variant call. Valid values are D, J, DJ for abundance, adjacency and both respectively.">
+##INFO=<ID=IMPRECISE,Number=0,Type=Flag,Description="Imprecise structural variation">
 ##contig=<ID=chrA,length=1000000>
 ##FORMAT=<ID=GT,Number=1,Type=String,Description="Genotype">
 #CHROM POS ID   REF ALT       QUAL FILTER INFO                                             FORMAT sample
@@ -1751,8 +1762,8 @@ l\_indiv  & uint32\_t & Data length of FORMAT and individual genotype fields \\ 
 CHROM     & int32\_t  & Given as an offset into the mandatory contig dictionary \\ \hline
 POS       & int32\_t  & 0-based leftmost coordinate \\ \hline
 rlen      & int32\_t  & Length of the record as projected onto the reference sequence.
-                        Must be the length of the REF allele or the declared length of a symbolic allele
-                        respecting the SVLEN/END attributes \\ \hline
+                        Must be the maxmimum of the length of the REF allele and the length
+                        inferred from the SVLEN/END of any symbolic alleles \\ \hline
 QUAL      & float     & Variant quality; 0x7F800001 for a missing value \\ \hline
 n\_info   & uint16\_t & The number of INFO fields in this record \\ \hline
 n\_allele & uint16\_t & The number of REF+ALT alleles in this record \\ \hline
